<resources>
    <string name="app_name">Homepage</string>
    <string name="signIn_pw_et">비밀번호를 입력하세요.</string>
    <string name="signIn_pw">비밀번호</string>
    <string name="signIn_id_et">아이디를 입력하세요.</string>
    <string name="signIn_id">아이디</string>
    <string name="signUp_name_et">이름을 입력하세요.</string>
    <string name="signUp_name">이름</string>
    <string name="toast_msg_idpqErr">아이디/비밀번호를 확인해주세요.</string>
</resources>